<?xml version="1.0"?>
<resources>
    <string name="app_name" translatable="false">GAIA Companion</string>
    <string name="main_greeting">Hello %s!</string>
    <!--validation error messages-->
    <string name="err_validation_username_required">Username is required</string>
    <string name="err_validation_password_required">Password is required</string>
    <string name="err_validation_firstname_required">First name is required</string>
    <string name="err_validation_lastname_required">Last name is required</string>
    <string name="err_validation_email_not_valid">Not a valid email address</string>
    <string name="err_validation_email_required">Email is required</string>
    <string name="err_validation_password_not_match">Passwords do not match</string>
    <string name="err_validation_password_not_strong">Weak Password</string>
    <string name="err_validation_repeat_password_required">Repeat Password is required</string>
    <!-- Strings related to sign-in -->
    <string name="login">Connect</string>
    <string name="prompt_login">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_create_account">I don\'t have an account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_logout_failed">Logout failed. Please try again!!</string>
    <string name="disclaimer_terms_privacy_login">By using the application, you are agreeing to our \n%1$s and %2$s</string>
    <string name="aggregated_sensors">Aggregated Sensors</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="hardware_sensors">Hardware Sensors</string>
    <string name="rooms">Rooms</string>
    <string name="title">Title</string>
    <string name="no_rooms_in_this_area">No Rooms in this area!</string>
    <string name="logout">Logout</string>
    <string name="temperature">Temperature</string>
    <string name="motion">Motion</string>
    <string name="luminosity">Luminosity</string>
    <string name="noise">Noise</string>
    <string name="electrical_current">Electrical Current</string>
    <string name="relative_humidity">Relative Humidity</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="atmospheric_pressure">Atmospheric Pressure</string>
    <string name="carbon_dioxide_concentration">Carbon Dioxide Concentration</string>
    <string name="external_ammonia_concentration">External Ammonia Concentration</string>
    <string name="external_carbon_dioxide_concentration">External Carbon Dioxide Concentration</string>
    <string name="external_carbon_monoxide_concentration">External Carbon Monoxide Concentration</string>
    <string name="external_oxygen_concentration">External Oxygen Concentration</string>
    <string name="external_air_contaminants">External Air Contaminants</string>
    <string name="radiation">Radiation</string>
    <string name="external_temperature">External Temperature</string>
    <string name="rain_height">Rain Height</string>
    <string name="calculated_power_consumption">Calculated Power Consumption</string>
    <string name="aggregated_motion">Aggregated Motion</string>
    <string name="aggregated_luminosity">Aggregated Luminosity</string>
    <string name="aggregated_noise">Aggregated Noise</string>
    <string name="aggregated_electrical_current">Aggregated Electrical Current</string>
    <string name="aggregated_relative_humidity">Aggregated Relative Humidity</string>
    <string name="aggregated_calculated_power_consumption">Aggregated Calculated Power Consumption</string>
</resources>
