<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="#93ba2c"
        android:orientation="vertical">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#313a42"
                    android:orientation="vertical"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/logo" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/splashscreen" />

                <LinearLayout
                    android:id="@+id/progressLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loginFormLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_login"
                        android:textColor="@color/colorWhite" />

                    <EditText
                        android:id="@+id/loginUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nextFocusDown="@+id/loginPassword"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_password"
                        android:textColor="@color/colorWhite" />

                    <EditText
                        android:id="@+id/loginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:nextFocusUp="@+id/loginUsername"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_input_vertical_margin"
                        android:layout_marginEnd="@dimen/form_input_horizontal_margin"
                        android:layout_marginBottom="@dimen/form_submit_vertical_margin"
                        android:gravity="start"
                        android:text="@string/action_forgot_password"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorWhite"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/login" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/registrationTermsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/form_input_horizontal_margin"
                    android:paddingEnd="@dimen/form_input_horizontal_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_input_vertical_margin"
                        android:gravity="start"
                        android:text="Links"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorWhite"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/loginGaiaChallengeLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="12dp"
                            android:text="Gaia Challenge" />

                        <Button
                            android:id="@+id/loginBMALink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="12dp"
                            android:text="BMA" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/loginCreateAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/form_input_horizontal_margin"
                        android:layout_marginRight="@dimen/form_input_horizontal_margin"
                        android:layout_marginBottom="@dimen/form_submit_vertical_margin"
                        android:gravity="center_horizontal"
                        android:text="@string/action_create_account"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/textColorLight"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/disclaimerTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/form_submit_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="true"
                        android:gravity="center_horizontal"
                        android:text="@string/disclaimer_terms_privacy_login"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/textColorLight"
                        android:visibility="gone" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
